--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ww-typeform-embed",
-    "version": "3.0.0",
+    "version": "3.1.0",
     "scripts": {
         "build": "weweb build",
         "serve": "weweb serve"
@@ -10,7 +10,7 @@
     },
     "devDependencies": {
         "@vue/eslint-config-prettier": "^6.0.0",
-        "@weweb/cli": "latest",
+        "@weweb/cli": "github:weweb-team/weweb-cli#webapp",
         "babel-eslint": "^10.1.0",
         "eslint": "^7.7.0",
         "eslint-plugin-prettier": "^3.1.4",
